Longitudes maximas y minimas tarjetas

--- a/Web/Pages/User/App_LocalResources/RegisterCreditCard.aspx.gl.resx
+++ b/Web/Pages/User/App_LocalResources/RegisterCreditCard.aspx.gl.resx
@@ -153,4 +153,10 @@
   <data name="lclMenuExplanation.Text" xml:space="preserve">
     <value>Rexistro da Tarxeta de Crédito</value>
   </data>
+  <data name="revNumberTamError.ErrorMessage" xml:space="preserve">
+    <value>Tarxeta Inválida</value>
+  </data>
+  <data name="revVerificationTamErro.ErrorMessage" xml:space="preserve">
+    <value>Lonxitide de código inválido</value>
+  </data>
 </root>
