--- a/Web/Pages/Product/App_LocalResources/RegisterTag.aspx.gl.resx
+++ b/Web/Pages/Product/App_LocalResources/RegisterTag.aspx.gl.resx
@@ -117,46 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btnRegisterCreditCard.Text" xml:space="preserve">
-    <value>Registrar</value>
+  <data name="btnRegisterTag.Text" xml:space="preserve">
+    <value>Rexistrar</value>
   </data>
-  <data name="lclCheckDefault.Text" xml:space="preserve">
-    <value>Tarjeta Predeterminada</value>
-  </data>
-  <data name="lclCreditNumber.Text" xml:space="preserve">
-    <value>Número de la Tarjeta de Crédito</value>
-  </data>
-  <data name="lclCreditType.Text" xml:space="preserve">
-    <value>Tipo de la Tarjeta de Crédito</value>
-  </data>
-  <data name="lclExpirationDate.Text" xml:space="preserve">
-    <value>Fecha de expiración de la Tarjeta de Crédito (MM/AA)</value>
-  </data>
-  <data name="lclVerificationCode.Text" xml:space="preserve">
-    <value>Código de verificación de la Tarjeta de Crédito</value>
-  </data>
-  <data name="Page.Title" xml:space="preserve">
-    <value>Practica MaD - Registro de la Tarjeta de Crédito del Usuario</value>
-  </data>
-  <data name="lblNumberError.Text" xml:space="preserve">
-    <value>Tarjeta de Crédito ya existente</value>
-  </data>
-  <data name="revEmail.ErrorMessage" xml:space="preserve">
-    <value>Sintaxis de email incorrecta</value>
-  </data>
-  <data name="revExpirationDate.ErrorMessage" xml:space="preserve">
-    <value>Sintaxis de fecha incorrecta</value>
-  </data>
-  <data name="revNumberError.ErrorMessage" xml:space="preserve">
-    <value>Solo números permitidos</value>
+  <data name="lblTagError.Text" xml:space="preserve">
+    <value>A etiqueta xa existe</value>
   </data>
   <data name="lclMenuExplanation.Text" xml:space="preserve">
-    <value>Registro de Tarjeta de Crédito</value>
+    <value>Crear Etiqueta</value>
   </data>
-  <data name="revNumberTamError.ErrorMessage" xml:space="preserve">
-    <value>Tarjeta Inválida</value>
-  </data>
-  <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
-    <value>Tamaño de código inválido</value>
+  <data name="lclTag.Text" xml:space="preserve">
+    <value>Nombre da etiqueta</value>
   </data>
 </root>
