--- a/Web/Pages/User/App_LocalResources/RegisterCreditCard.aspx.gl.resx
+++ b/Web/Pages/User/App_LocalResources/RegisterCreditCard.aspx.gl.resx
@@ -156,7 +156,7 @@
   <data name="revNumberTamError.ErrorMessage" xml:space="preserve">
     <value>Tarxeta Inválida</value>
   </data>
-  <data name="revVerificationTamErro.ErrorMessage" xml:space="preserve">
+  <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
     <value>Lonxitide de código inválido</value>
   </data>
 </root>
