--- a/Web/Pages/User/App_LocalResources/UpdateCreditCard.aspx.resx
+++ b/Web/Pages/User/App_LocalResources/UpdateCreditCard.aspx.resx
@@ -156,7 +156,7 @@
   <data name="revNumberTamError.ErrorMessage" xml:space="preserve">
     <value>Invalid Credit Card</value>
   </data>
-  <data name="revVerificationTamErro.ErrorMessage" xml:space="preserve">
+  <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
     <value>Invalid Verification Code Lenght</value>
   </data>
 </root>
