--- a/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.gl.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.gl.resx
@@ -117,10 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnAddCart.Text" xml:space="preserve">
+    <value>Engadir ao carrito</value>
+  </data>
   <data name="hlComments.Text" xml:space="preserve">
     <value>Comentarios</value>
   </data>
+  <data name="lblAmountError.Text" xml:space="preserve">
+    <value>Cantidade dispoñible en stock insuficiente</value>
+  </data>
   <data name="lblProductError.Text" xml:space="preserve">
     <value>Non se atopou o produto</value>
+  </data>
+  <data name="lclAmount.Text" xml:space="preserve">
+    <value>Cantidade</value>
+  </data>
+  <data name="lclGift.Text" xml:space="preserve">
+    <value>Envolver para regalo</value>
+  </data>
+  <data name="lnkBack.Text" xml:space="preserve">
+    <value>Lista de productos</value>
+  </data>
+  <data name="lnkUpdate.Text" xml:space="preserve">
+    <value>Actualizar Producto</value>
   </data>
 </root>
