--- a/Web/Pages/Shopping/App_LocalResources/Cart.aspx.resx
+++ b/Web/Pages/Shopping/App_LocalResources/Cart.aspx.resx
@@ -127,7 +127,7 @@
     <value>Shopping Cart</value>
   </data>
   <data name="lnkBack.Text" xml:space="preserve">
-    <value>Return to Products</value>
+    <value>Products</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
     <value>PracticaMaD - Shopping Cart</value>
@@ -146,5 +146,11 @@
   </data>
   <data name="lblAmountError.Text" xml:space="preserve">
     <value>Insufficient stock</value>
+  </data>
+  <data name="btnDelete" xml:space="preserve">
+    <value>Remove</value>
+  </data>
+  <data name="lnkMain.Text" xml:space="preserve">
+    <value>Menu</value>
   </data>
 </root>
