--- a/Web/Pages/Product/App_LocalResources/ProductComments.aspx.es.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductComments.aspx.es.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="hlAddComment.Text" xml:space="preserve">
+    <value>Escribir un comentario</value>
+  </data>
   <data name="lblNoComments.Text" xml:space="preserve">
     <value>No se encontraron comentarios</value>
   </data>
