--- a/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.resx
@@ -117,23 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btnAddCart.Text" xml:space="preserve">
-    <value>Add to Shopping Cart</value>
-  </data>
   <data name="hlComments.Text" xml:space="preserve">
     <value>Comments</value>
-  </data>
-  <data name="lblAmountError.Text" xml:space="preserve">
-    <value>Quantity available in stock insufficient</value>
   </data>
   <data name="lblProductError.Text" xml:space="preserve">
     <value>No product was found</value>
   </data>
-  <data name="lclAmount.Text" xml:space="preserve">
-    <value>Amount</value>
-  </data>
-  <data name="lclGift.Text" xml:space="preserve">
-    <value>Gift wrap</value>
+  <data name="lnkAddCart.Text" xml:space="preserve">
+    <value>Add to Shopping Cart</value>
   </data>
   <data name="lnkBack.Text" xml:space="preserve">
     <value>Product List</value>
