Enlazes de vuelta y catch arreglados

--- a/Web/App_LocalResources/PracticaMaD.Master.resx
+++ b/Web/App_LocalResources/PracticaMaD.Master.resx
@@ -141,6 +141,9 @@
   <data name="lnkLogout.Text" xml:space="preserve">
     <value>Logout</value>
   </data>
+  <data name="lnkProducts.Text" xml:space="preserve">
+    <value>Products</value>
+  </data>
   <data name="lnkRegisterTag.Text" xml:space="preserve">
     <value>Register Tag</value>
   </data>
