--- a/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.es.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.es.resx
@@ -130,6 +130,6 @@
     <value>Lista de productos</value>
   </data>
   <data name="lnkUpdate.Text" xml:space="preserve">
-    <value>Actualizar Product</value>
+    <value>Actualizar Producto</value>
   </data>
 </root>
