--- a/Web/Pages/Shopping/App_LocalResources/Buy.aspx.es.resx
+++ b/Web/Pages/Shopping/App_LocalResources/Buy.aspx.es.resx
@@ -154,7 +154,7 @@
     <value>No hay suficiente cantidad en  stock de</value>
   </data>
   <data name="lnkBack.Text" xml:space="preserve">
-    <value>Regresar al carrito</value>
+    <value>Cancelar y regresar al carrito</value>
   </data>
   <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
     <value>Tamaño de código inválido</value>
