--- a/Web/Pages/Shopping/App_LocalResources/Buy.aspx.gl.resx
+++ b/Web/Pages/Shopping/App_LocalResources/Buy.aspx.gl.resx
@@ -154,7 +154,7 @@
     <value>Non existe a cantidade especifícada en stock de</value>
   </data>
   <data name="lnkBack.Text" xml:space="preserve">
-    <value>Regresar ao carrito</value>
+    <value>Cancelar e regresar ao carrito</value>
   </data>
   <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
     <value>Lonxitide de código inválido</value>
