--- a/Web/App_LocalResources/PracticaMaD.Master.es.resx
+++ b/Web/App_LocalResources/PracticaMaD.Master.es.resx
@@ -141,6 +141,9 @@
   <data name="lnkLogout.Text" xml:space="preserve">
     <value>Salir</value>
   </data>
+  <data name="lnkProducts.Text" xml:space="preserve">
+    <value>Productos</value>
+  </data>
   <data name="lnkRegisterTag.Text" xml:space="preserve">
     <value>Registrar Etiqueta</value>
   </data>
