--- a/Web/App_LocalResources/PracticaMaD.Master.gl.resx
+++ b/Web/App_LocalResources/PracticaMaD.Master.gl.resx
@@ -141,6 +141,9 @@
   <data name="lnkLogout.Text" xml:space="preserve">
     <value>Saír</value>
   </data>
+  <data name="lnkProducts.Text" xml:space="preserve">
+    <value>Productos</value>
+  </data>
   <data name="lnkRegisterTag.Text" xml:space="preserve">
     <value>Rexistrar Etiqueta</value>
   </data>
