--- a/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.gl.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.gl.resx
@@ -129,6 +129,9 @@
   <data name="lclSearch.Text" xml:space="preserve">
     <value>Filtro de produtos</value>
   </data>
+  <data name="lnkBack.Text" xml:space="preserve">
+    <value>Inicio</value>
+  </data>
   <data name="txtSearch.placeholder" xml:space="preserve">
     <value>Palabra chave...</value>
   </data>
