--- a/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.resx
@@ -129,6 +129,9 @@
   <data name="lclSearch.Text" xml:space="preserve">
     <value>Product filter</value>
   </data>
+  <data name="lnkBack.Text" xml:space="preserve">
+    <value>Menu</value>
+  </data>
   <data name="txtSearch.placeholder" xml:space="preserve">
     <value>Keyword to search...</value>
   </data>
