--- a/Web/Pages/Product/App_LocalResources/RegisterTag.aspx.es.resx
+++ b/Web/Pages/Product/App_LocalResources/RegisterTag.aspx.es.resx
@@ -129,4 +129,7 @@
   <data name="lclTag.Text" xml:space="preserve">
     <value>Nombre de la etiqueta</value>
   </data>
+  <data name="lnkMain.Text" xml:space="preserve">
+    <value>Inicio</value>
+  </data>
 </root>
