--- a/Web/Pages/Product/App_LocalResources/RegisterTag.aspx.gl.resx
+++ b/Web/Pages/Product/App_LocalResources/RegisterTag.aspx.gl.resx
@@ -129,4 +129,7 @@
   <data name="lclTag.Text" xml:space="preserve">
     <value>Nombre da etiqueta</value>
   </data>
+  <data name="lnkMain.Test" xml:space="preserve">
+    <value>Inicio</value>
+  </data>
 </root>
