--- a/Web/Pages/User/App_LocalResources/Register.aspx.gl.resx
+++ b/Web/Pages/User/App_LocalResources/Register.aspx.gl.resx
@@ -171,4 +171,46 @@
   <data name="default" xml:space="preserve">
     <value>Predeterminada</value>
   </data>
+  <data name="lblNumberError.Text" xml:space="preserve">
+    <value>Tarxeta de Crédito xa existente</value>
+  </data>
+  <data name="lclCheckDefault.Text" xml:space="preserve">
+    <value>Tarxeta Predeterminada</value>
+  </data>
+  <data name="lclCreditNumber.Text" xml:space="preserve">
+    <value>Número da Tarxeta de Crédito</value>
+  </data>
+  <data name="lclCreditType.Text" xml:space="preserve">
+    <value>Tipo da Tarxeta de Crédito</value>
+  </data>
+  <data name="lclExpirationDate.Text" xml:space="preserve">
+    <value>Data de expiración da Tarxeta de Crédito (MM/AA)</value>
+  </data>
+  <data name="lclMenuExplanation.Text1" xml:space="preserve">
+    <value>Rexistro da Tarxeta de Crédito</value>
+  </data>
+  <data name="lclVerificationCode.Text" xml:space="preserve">
+    <value>Código de verificación da Tarxeta de Crédito</value>
+  </data>
+  <data name="revExpirationDate.ErrorMessage" xml:space="preserve">
+    <value>Sintaxis da fecha incorrecta</value>
+  </data>
+  <data name="revNumberError.ErrorMessage" xml:space="preserve">
+    <value>Só números permitidos</value>
+  </data>
+  <data name="revNumberTamError.ErrorMessage" xml:space="preserve">
+    <value>Tarxeta Inválida</value>
+  </data>
+  <data name="revVerificationTamError.ErrorMessage" xml:space="preserve">
+    <value>Lonxitide de código inválido</value>
+  </data>
+  <data name="lblOpcional.Text" xml:space="preserve">
+    <value>Opcional: Rexistrar Tarxeta de Crédito</value>
+  </data>
+  <data name="btnCancel.Text" xml:space="preserve">
+    <value>Cancelar</value>
+  </data>
+  <data name="lnkBack.Text" xml:space="preserve">
+    <value>Volver</value>
+  </data>
 </root>
