--- a/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductDetails.aspx.resx
@@ -117,14 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnAddCart.Text" xml:space="preserve">
+    <value>Add to Shopping Cart</value>
+  </data>
   <data name="hlAddComment.Text" xml:space="preserve">
     <value>Add a comment</value>
   </data>
   <data name="hlComments.Text" xml:space="preserve">
     <value>Comments</value>
   </data>
+  <data name="lblAmount.Text" xml:space="preserve">
+    <value>Amount</value>
+  </data>
+  <data name="lblAmountError.Text" xml:space="preserve">
+    <value>Insufficient quantity available in stock of</value>
+  </data>
   <data name="lblProductError.Text" xml:space="preserve">
     <value>No product was found</value>
+  </data>
+  <data name="lblQuantity.Text" xml:space="preserve">
+    <value>Available stock :</value>
+  </data>
+  <data name="lclGift.Text" xml:space="preserve">
+    <value>Gift wrap</value>
   </data>
   <data name="lnkAddCart.Text" xml:space="preserve">
     <value>Add to Shopping Cart</value>
@@ -134,5 +149,8 @@
   </data>
   <data name="lnkUpdate.Text" xml:space="preserve">
     <value>Update Product</value>
+  </data>
+  <data name="revNumberError.ErrorMessage" xml:space="preserve">
+    <value>Only numbers allow</value>
   </data>
 </root>
