--- a/Web/Pages/Product/App_LocalResources/AddComment.aspx.es.resx
+++ b/Web/Pages/Product/App_LocalResources/AddComment.aspx.es.resx
@@ -132,10 +132,16 @@
   <data name="lblCommentAdded.Text" xml:space="preserve">
     <value>Se ha publicado el comentario</value>
   </data>
+  <data name="lblCommented.Text" xml:space="preserve">
+    <value>Usted ya ha publicado un comentario para este producto.</value>
+  </data>
   <data name="lblNoProduct.Text" xml:space="preserve">
     <value>No se especificó producto</value>
   </data>
   <data name="lblUnlogedUser.Text" xml:space="preserve">
     <value>Usuario no identificado</value>
+  </data>
+  <data name="lnkBack.Text" xml:space="preserve">
+    <value>Volver</value>
   </data>
 </root>
