--- a/Web/Pages/Product/App_LocalResources/AddComment.aspx.gl.resx
+++ b/Web/Pages/Product/App_LocalResources/AddComment.aspx.gl.resx
@@ -132,10 +132,16 @@
   <data name="lblCommentAdded.Text" xml:space="preserve">
     <value>Publicouse o comentario</value>
   </data>
+  <data name="lblCommented.Text" xml:space="preserve">
+    <value>Ustede xa publicou un comentario para iste producto.</value>
+  </data>
   <data name="lblNoProduct.Text" xml:space="preserve">
     <value>Non se especificou produto</value>
   </data>
   <data name="lblUnlogedUser.Text" xml:space="preserve">
     <value>Usuario non identificado</value>
+  </data>
+  <data name="lnkBack.Text" xml:space="preserve">
+    <value>Volver</value>
   </data>
 </root>
