--- a/Web/Pages/User/App_LocalResources/Register.aspx.resx
+++ b/Web/Pages/User/App_LocalResources/Register.aspx.resx
@@ -210,4 +210,7 @@
   <data name="lnkBack.Text" xml:space="preserve">
     <value>Back</value>
   </data>
+  <data name="lblDateError.Text" xml:space="preserve">
+    <value>Invalid Credit Card Expiration Date</value>
+  </data>
 </root>
