--- a/Web/Pages/App_LocalResources/MainPage.aspx.es.resx
+++ b/Web/Pages/App_LocalResources/MainPage.aspx.es.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lclContent.Text" xml:space="preserve">
-    <value>Contenido de la Página Principal de Miniportal</value>
+    <value>Contenido de la Página Principal de PracticaMaD</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
     <value>PracticaMaD - Página Principal</value>
