--- a/Web/Pages/App_LocalResources/MainPage.aspx.resx
+++ b/Web/Pages/App_LocalResources/MainPage.aspx.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lclContent.Text" xml:space="preserve">
-    <value>MiniPortal Main Page Content</value>
+    <value>PracticaMaD Main Page Content</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
     <value>PracticaMaD - Main Page</value>
