--- a/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.es.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.es.resx
@@ -117,14 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnAddCart.Text" xml:space="preserve">
+    <value>Añadir al carrito</value>
+  </data>
   <data name="btnSearch.Text" xml:space="preserve">
     <value>Buscar</value>
   </data>
   <data name="lblNoProducts.Text" xml:space="preserve">
     <value>No se encontraron productos</value>
-  </data>
-  <data name="lclAdd.Text" xml:space="preserve">
-    <value>Añadir al carrito</value>
   </data>
   <data name="lclSearch.Text" xml:space="preserve">
     <value>Filtro de productos</value>
