--- a/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.gl.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.gl.resx
@@ -123,6 +123,9 @@
   <data name="btnSearch.Text" xml:space="preserve">
     <value>Buscar</value>
   </data>
+  <data name="lblAmountError.Text" xml:space="preserve">
+    <value>Cantidade insuficiente de</value>
+  </data>
   <data name="lblNoProducts.Text" xml:space="preserve">
     <value>Non se atoparon produtos</value>
   </data>
