--- a/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.resx
+++ b/Web/Pages/Product/App_LocalResources/ProductSearch.aspx.resx
@@ -123,6 +123,9 @@
   <data name="btnSearch.Text" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="lblAmountError.Text" xml:space="preserve">
+    <value>Insufficient quantity available in stock of</value>
+  </data>
   <data name="lblNoProducts.Text" xml:space="preserve">
     <value>No products found</value>
   </data>
